--- a/Course Work/Course Work.vcxproj
+++ b/Course Work/Course Work.vcxproj
@@ -150,11 +150,12 @@
     <ClCompile Include="Course Work.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Date.h" />
+    <ClInclude Include="Fullname.h" />
     <ClInclude Include="Group.h" />
     <ClInclude Include="Tourist.h" />
     <ClInclude Include="Guide.h" />
     <ClInclude Include="Activitie.h" />
-    <ClInclude Include="TravelAgency.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
